# realtime-particle-effects-engine-revamp

./: .gitignore  CMakeLists.txt  README.md
shaders/: bloom_blur.frag  bloom_threshold.frag  composite.frag  fullscreen.vert  ground.frag  ground.vert  particle.frag  particle.vert
src/: App.cpp  App.h  Camera.cpp  Camera.h  CurlNoise.h  Particles.cpp  Particles.h  PostProcess.cpp  PostProcess.h  Presets.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  TextureAtlas.cpp  TextureAtlas.h  main.cpp
